# botframework-rs

./: .gitignore  Cargo.toml  README.md
adaptive_cards/: Cargo.toml
adaptive_cards/src/: actions.rs  lib.rs
adaptive_cards/src/elements/: column_set.rs  container.rs  fact_set.rs  image.rs  image_set.rs  media.rs  mod.rs  text_block.rs
adaptive_cards/src/elements/input/: choice.rs  date.rs  mod.rs  number.rs  text.rs  (+2 more)
adaptive_cards/src/props/: color.rs  container_style.rs  height.rs  horizontal_alignment.rs  image_size.rs  image_style.rs  mod.rs  spacing.rs  text_size.rs  vertical_content_alignment.rs  weight.rs  width.rs
bot-middleware/: Cargo.toml
bot-middleware/src/: additional.rs  main.rs  tokens.rs
bot-middleware/src/middleware/: mod.rs
bot_middleware/: Cargo.toml
bot_middleware/src/: http.rs  lib.rs
bot_middleware/src/middleware/: actix.rs  mod.rs
bot_schema/: Cargo.toml
bot_schema/src/: channels.rs  descriptors.rs  empty_str_visitor.rs  entity.rs  lib.rs
bot_schema/src/activity/: message.rs  mod.rs  reaction.rs  update.rs
bot_schema/src/attachments/: actions.rs  hero_card.rs  mod.rs
botschema/: Cargo.toml
botschema/src/: channels.rs  descriptors.rs  entity.rs  lib.rs
botschema/src/activity/: message.rs  mod.rs
botschema/src/attachements/: actions.rs  adaptive_card.rs  hero_card.rs  mod.rs
jwt/: Cargo.toml
jwt/src/: alg.rs  builder.rs  deserialize.rs  error.rs  lib.rs  serialize.rs  token.rs  unverified_token.rs
jwt/src/crypto/: hmac_providers.rs  mod.rs  rsa_providers.rs
rust-bot/: Cargo.toml
rust-bot/src/: main.rs
